--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine ON
-    RewriteRule ^([a-zA-Z0-9_-]+)/?$ router.php?pagina=$1
+    RewriteRule ^([a-zA-Z0-9_-]+)/?([a-zA-Z0-9_-]+)?$ router.php?pagina=$1&id=$2
+
 </IfModule>
